estilos.css
:root {
	--primary-color: #14103b;
	--secundary-color:  #6789ba;
	--highlight-color: #f02a71;
	--light-color: #7ec0e4;
	--light-color-span: #d7f1ff;
	--font-size: 1.8rem;
}
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: 'Roboto', sans-serif;
}

html {
	scroll-behavior: smooth;
	font-size: 62.5%;
	width: 100vw;
}

a {
	text-decoration: none;
	outline: none;
}

a:hover {
	text-decoration: underline;
}

body {
	width: 100vw;
	font-size: var(--font-size);
	background: var(--primary-color);
}

/* * ============================== */
/* * ============ HEADER ========== */
/* * ============================== */

.navbar {
	/* background: linear-gradient(to bottom, var(--secundary-color), var(--primary-color)); */
	background: var(--primary-color);
	position: sticky;
	top: 0;
	display: flex;
	flex-wrap: wrap;
	align-content: center;
	justify-content: space-between;
	align-items: stretch;
	z-index: 1001;
}

.navbar__logo-part1 {
	font-family: 'Bangers', cursive;
}

.navbar a {
	color: var(--light-color);
	display: inline-block;
	width: 100%;
	transition: .5s ease-out all;
	text-align: center;	
	padding: 1rem 0.5rem;
}

.navbar .navbar__logo {
	color: var(--primary-color);
	align-self: center;
}

.navbar .navbar__logo-part1, .reference__ING {
	color: var(--highlight-color);
	font-family: 'Bangers', cursive;
}

.navbar .navbar__logo-part2 {
	color: var(--light-color);
}

.navbar .navbar__menu-contact {
	color: var(--highlight-color);
}

.navbar a:hover {
	background: var(--highlight-color);
	color: var(--light-color);
	text-decoration: none;
}

.navbar .navbar__logo a:hover {
	background-color: var(--secundary-color);
}

.navbar__menu {
	max-width: 1000px;
	width: 50%;
	display: flex;
}

/* * ============================== */
/* * ===== CONTENEDOR COVER ======= */
/* * ============================== */
.cover .cover__desc h2 {
  position: relative;
  z-index: 10;
}

.cover {
  height: 100vh;	
	display: flex;
	background-image: url("https://i.ibb.co/d5tz7TZ/ing-gustavo-gonzalez-color-big.jpg");
	background-repeat: no-repeat;
	background-size: cover;
	background-position-x: right;
	padding: 20vh 40vw 40vh 10vw;
}

.cover img {
	height: 100vh;
	width: 100vw;
	vertical-align: bottom;
	object-fit: cover;
	object-position: 0 50%;
}

.cover .cover__desc {
	padding: 15px;
	align-self: center;
	background-color: rgba(21, 20, 49, 80%);
	color: var(--light-color);
  position: relative;
  overflow: hidden;
  border-radius: 20px;
}
.cover .cover__desc::before {
	content: '';
  position: absolute;
  width: 130%;
	left: -15%;
	top: calc(50% - 70px);
  height: 140px;
  background: linear-gradient(to right, var(--light-color), var(--light-color), var(--highlight-color), var(--highlight-color));
  animation: animate 10s linear infinite;
}
.cover .cover__desc::after {
  content: '';
  position: absolute;
  background: #0e1538;
  inset: 4px;
  border-radius: 16px;
}
.cover .cover__desc-engineer {
	font-size: 4rem;
	position: relative;
	z-index: 10;
}

.cover .cover__desc-engineer span {
	background-color: var(--highlight-color);
	color: var(--light-color);
	text-shadow: none;
	padding: 0 3px;
}

.cover .cover__desc-about {
	color: var(--secundary-color);
	position: relative;
	z-index: 10;
}

.cover .cover-boton {
	border: 1px solid var(--secundary-color);
	margin-top: 10px;
	padding: 10px;
	display: inline-block;
	border-radius: 10px;
	color: var(--secundary-color);
	align-self: flex-start;
	text-decoration: none;
	text-shadow: none;
	position: relative;
	z-index: 10;
}

/* * ============================== */
/* * =========== ABOUT ============ */
/* * ============================== */

.about {
	height: 100vh;
	background-image: url('https://i.ibb.co/BNC31HL/about-ing-gustavo-gonzalez-big.jpg');
	background-size: cover;
	background-position-y: bottom;
	background-repeat: no-repeat;
	padding: 5% 50% 10% 10%;
	display: flex;
	flex-direction: column;	
	justify-content: center;
	position: relative;
}

.about__desciption {
	background-color: rgba(21, 20, 49, 70%);
	border-radius: 5px;
	padding: 15px;
	width: 100%;
	color: var(--light-color);
	font-size: 2rem;
	line-height: 2.5rem;
	border-radius: 20px;
	position: relative;
	overflow: hidden;
}

/*.about__desciption::before {
	content: '';
  position: absolute;
  width: 140px;
	top: -20%; /* 50% - (height / 2) 
	left: calc(50% - 70px);
  height: 140%;
  background: linear-gradient(to bottom, var(--light-color), var(--light-color), var(--highlight-color), var(--highlight-color));
  animation: animate 10s linear infinite;
}*/

/* .about__desciption::after {
	content: '';
  position: absolute;
	background-color: rgba(21, 20, 49, 70%);
  background: var(--primary-color);
  inset: 4px;
  border-radius: 16px;
	z-index: 1;
} */

.about__desciption p {
	z-index: 10;
}

.about span {
	color: var(--highlight-color);
}

/* * ============================== */
/* * ============ WORK ============ */
/* * ============================== */

.work {
	max-width: 1200px;
	width: 100%;
	margin: auto;
	display: flex;
}

.work-content {
	font-size: 1.6rem;
	color: var(--light-color);
	width: 100%;
	overflow-x: hidden;
}

.work-post-trayectory {
	width: 100%;
	overflow-x: hidden;
	overflow-y: hidden;
	padding: 0 10px;
}

.work-post-trayectory__container {
	margin-top: 20px;
	margin-bottom: 40px;
}

.work-post {
	width: 100%;
	overflow-y: hidden;
	overflow-x: scroll;
	padding: 0 10px;
}	

.work-post__container {
	margin: 20px 0;
	white-space: nowrap;
}

.work-post__item {
	display: inline-block;
	overflow: hidden;
	margin-right: 10px;
	vertical-align: top;
}

.work-post__item a {
	color: var(--light-color);
	text-decoration: none;
}

.work-desc {
	white-space: normal;
	width: 40vw;
}	

.work-picture .work-picture_img, .work-picture .work-picture_video {
	height: 30vw;
	border-radius: 5px;
	/* margin-left: auto;
	margin-right: auto; */
}	

.work-content .work-desc__title {
	font-weight: normal;
}
/* ... */

